# gamehub

./: Cargo.toml  README.md  docker-compose.local.yml
.github/workflows/: backend-pr.yml  backend.yml  ci.yml
.sqlx/: query-290a736cd8c7d6414bb0ddd3275d479f5cc977f9c7fb149bf5e029ea6d168be1.json  query-30e3c8d300aded5d528e472580fdb93bac505807dfefd1899e9204fc2ff04200.json  query-b184c3dba239979d90efb29e9185f83051ea6d9bd72fe2144e04a4506b742499.json  query-e2912fc1f2564a9e89513da07b33481b755872ed058b028b6685f31260706b15.json
backend/: Cargo.toml  README.md
backend/migrations/: 1_create_player_and_third_party_sign_in_tables.sql
backend/src/: main.rs
backend/src/auth/config/: auth_config.rs
backend/src/config/: application_config.rs  common_config.rs  mod.rs  postgres_config.rs  secret_config.rs  server_config.rs
backend/src/health_check/: health_check_routes.rs  mod.rs
backend/src/player/: mod.rs  player.rs  player_id.rs  player_name.rs  player_name_validation_error.rs
migrations/: 00001_initial_migration.sql
src/: api_error.rs  app_state.rs  config.rs  healthcheck.rs  main.rs
src/game/: game.rs  game_support.rs  mod.rs
src/players/: error.rs  http.rs  jwt_service.rs  mod.rs  player.rs  players_db.rs  players_service.rs  sign_in_method.rs
src/players/snapshots/: gamehub__players__http__tests__sign_in_request_json_snapshot.snap  gamehub__players__http__tests__sign_in_response_json_snapshot.snap  gamehub__players__jwt_service__tests__auth_token_claims_json_snapshot.snap  gamehub__players__player__tests__player_json_snapshot.snap  gamehub__players__players_service__tests__third_party_id_token_claims_json_snapshot.snap
